css/style.css
/* ... */
#sideButton .toggle {
    height: 100%;
    left: 0;
    position: absolute;
    text-align: center;
    top: 0;
    width: 100%
}

#sideButton .toggle:before {
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    font-family: FontAwesome;
    font-style: normal;
    font-weight: normal;
    text-transform: none!important
}

#sideButton .toggle:before {
    color: white;
    content: '\f039';
    font-size: 1em;
    height: 40px;
    left: 10px;
    line-height: 40px;
    opacity: .5;
    position: absolute;
    top: 11px;
    width: 60px;
    z-index: 1
}

#sideButton .toggle:after {
    background: rgba(163, 169, 170, 0.75);
    border-radius: 2px;
    content: '';
    height: 40px;
    left: 10px;
    position: absolute;
    top: 10px;
    width: 60px
}

#topPanel,
#sidePanel {
    background: var(--color-dark-text);
    color: white;
    font-size: .8em;
    letter-spacing: .075em;
    text-transform: uppercase
}

#topPanel nav,
#sidePanel nav {
    padding: .25em .5em 1em .5em
}

#topPanel .link,
#sidePanel .link {
    border: 0;
    border-top: solid 1px rgba(255, 255, 255, 0.05);
    color: inherit;
    display: block;
    height: 3em;
    line-height: 3em;
    opacity: .75;
    text-decoration: none
}

#topPanel .link.depth-0,
#sidePanel .link.depth-0 {
    font-weight: 900
}

#topPanel .link:first-child,
#sidePanel .link:first-child {
    border-top: 0
}

#topPanel .indent-1,
#sidePanel .indent-1 {
    display: inline-block;
    width: 1em
}

#topPanel .indent-2,
#sidePanel .indent-2 {
    display: inline-block;
    width: 2em
}

#topPanel .indent-3,
#sidePanel .indent-3 {
    display: inline-block;
    width: 3em
}

#topPanel .indent-4,
#sidePanel .indent-4 {
    display: inline-block;
    width: 4em
}

#topPanel .indent-5,
#sidePanel .indent-5 {
    display: inline-block;
    width: 5em
}

#unitsNav {
    margin-left: 45%
}

a {
    display: inline-block;
    position: relative
}

.caption {
    opacity: 0;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    background-color: #fff;
    color: #000;
    line-height: 1.1em;
    -webkit-transition: all 1s linear;
    -o-transition: all 1s linear;
    -ms-transition: all 1s linear;
    -moz-transition: all 1s linear;
    transition: all 1s linear;
    height: 100%;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center
}

a:hover .caption {
    opacity: 1;
    -webkit-transition: all 1s linear;
    -o-transition: all 1s linear;
    -ms-transition: all 1s linear;
    -moz-transition: all 1s linear;
    transition: all 1s linear
}

​ .gallery-wrapper {
    width: 35em;
    text-align: center;
    padding: 1em 0 4em 0
}

.gallery-best-image {
    max-height: 20em;
    max-width: 20em
}

.gallery-image-wrapper {
    height: 300px;
    width: 300px;
    display: inline-block;
    margin: 1em;
    position: relative
}

.gallery-image {
    margin: auto;
    position: absolute;
    top: 0;
    bottom: 0;
    max-height: 100%;
    max-width: 100%
}

#newsGallery {
    text-align: center
}

#donate {
    margin-top: 2em;
    text-align: center
}

#capra, #contact-info {
    text-align: center
}

.zoomer:hover img {
    -webkit-transition: 0.6s ease;
    transition: 0.6s ease;
    -webkit-transform: scale(1.2);
    transform: scale(1.2);
}

#small_nav {
    margin-top: 1em;
}

#fb-container {
    width: 45%;
    margin-left: 1em;
}

.centered {
    text-align: center;
}

#small_nav {
    margin-top: -3em;
    margin-bottom: -5em
}

